# sqa-project

./: .gitignore  1d-ssh-model.py  1d-ssh-plotting.py  DenisSSHModel.py  HarmonicTest.py  QRT.md  README.md  SSH.py  SSHSimulation.py  SSHVisualiser.py  denis-plot  denis-plot.py  denis-run.py  denis-ssh-model.py  integrate.py  integrate2.py  paulialgebra.py  potential_refactor.md  refactor-plan.md  requirements.txt  single-qubit-waveguide.py  stylesheet.mplstyle
chern_insulator/: CorrelationSolver.py  CurrentDecayTest.py  CurrentSolver.py  Ensemble.py  Hamiltonian.py  HamiltonianTest.py  Model.py  Plotting.py  main.py  nontrivial-current.md  program.prof  pyproject.toml
chern_insulator/data/: <jx(t + tau) jx(t)>, delta=1.0.txt  <jx(t + tau) jx(t)>, delta=3.0.txt  <jx(t + tau) jy(t)>, delta=1.0.txt  <jx(t + tau) jy(t)>, delta=3.0.txt  <jy(t + tau) jx(t)>, delta=1.0.txt  <jy(t + tau) jx(t)>, delta=3.0.txt  <jy(t + tau) jy(t)>, delta=1.0.txt  <jy(t + tau) jy(t)>, delta=3.0.txt  A=0, D=1.0, k=31 N=10^10.npy  A=0, D=1.0, k=31 N=10^8.npy  A=0, D=1.0, k=31.npy  A=0, D=1.0, k=61.npy  A=0, D=3.0, k=31 N=10^10.npy  A=0, D=3.0, k=31 N=10^8.npy  A=0, D=3.0, k=31.npy  A=0, D=3.0, k=61.npy  A=0.0, D=1.0, k=21, t=6.npy  A=0.0, D=3.0, k=21, t=6.npy  A=0.05, D=1.0, k=21, t=6.npy  A=0.05, D=3.0, k=21, t=6.npy  A=0.1, D=1.0, k=21, t=6.npy  A=0.1, D=1.0, k=61.npy  A=0.1, D=3.0, k=21, t=6.npy  A=0.1, D=3.0, k=61.npy  A=0.2, D=1.0, k=21, t=11, N=10^10.npy  A=0.2, D=1.0, k=21, t=11, N=10^8.npy  A=0.2, D=1.0, k=21, t=11.npy  A=0.2, D=1.0, k=21, t=6.npy  A=0.2, D=1.0, k=21.npy  AxisData.py  (+34 more)
(+130 files in other folders)
