[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chern_insulator"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.61.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "numba>=0.65.1",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.0",
    "pillow==12.1.1",
    "psutil==7.2.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "scipy==1.17.0",
    "setuptools==82.0.1",
    "six==1.17.0",
    "snakeviz>=2.2.2",
    "sympy==1.14.0",
    "tqdm==4.67.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
chern_insulator = "core.main:main"
